--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# DB
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/kata_db
+spring.datasource.username=kata
+spring.datasource.password=kata
 
+# Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.show_sql=true
+
+
+# Http
+spring.mvc.hiddenmethod.filter.enabled=true
+
+#
+#spring.jpa.generate-ddl=false
+#spring.jpa.hibernate.ddl-auto = update
