--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/kata_db
+spring.datasource.url=jdbc:mysql://localhost:3306/spring
 spring.datasource.username=kata
 spring.datasource.password=kata
 
@@ -15,3 +15,7 @@ spring.mvc.hiddenmethod.filter.enabled=true
 #
 #spring.jpa.generate-ddl=false
 #spring.jpa.hibernate.ddl-auto = update
+
+#Logg
+#logging.level.org.springframework=debug
+#logging.level.org.hibernate=debug
